fix the date show default value(Moonshine-IDE/Moonshine-IDE#1017)

--- a/src/view/domino/propertyEditors/DominoViewColumnPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoViewColumnPropertyEditor.mxml
@@ -761,6 +761,7 @@
 			if(cobj.columnDateFormatDateShow==null || cobj.columnDateFormatDateShow==""){
 				cobj.columnDateFormatDateShow="yearmonthday";
 			}
+			selectCurrentItem(columnDateTimeDisplayDateShowList,cobj.columnDateFormatDateShow);
 			if(cobj.columnDateFormatSpecial==null || cobj.columnDateFormatSpecial==""){
 				cobj.columnDateFormatSpecial="fourdigityearfor21stcentury";
 			}
